# SourceLens

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  container.py  main.py  schemas.py
backend/app/api/: conversations.py  dependencies.py  documents.py  health.py
backend/app/core/: logging.py  settings.py
backend/app/repositories/: mongo.py  vectors.py
backend/app/services/: documents.py  openai_client.py  rag.py
backend/tests/: test_api_contract.py  test_chunking.py  test_document_source.py  test_rag.py  test_sample_documents.py  test_vectors.py
docs/: ai-assisted-development.md  architecture.md  productionization.md
docs/samples/: atlas-project-brief.txt  atlas-support-and-security-policy.txt
evals/: questions.jsonl
frontend/: eslint.config.mjs  openapi-ts.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: query-provider.tsx
frontend/components/ui/: button.tsx  confirm-dialog.tsx
frontend/features/workspace/: source-lens-workspace.tsx
frontend/lib/: api.ts
