[project]
name = "sourcelens-api"
version = "0.1.0"
description = "Grounded document question answering API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.116.0",
  "lancedb>=0.34.0",
  "openai>=2.0.0",
  "pydantic-settings>=2.10.0",
  "pymongo>=4.13.0",
  "pymupdf>=1.26.0",
  "python-multipart>=0.0.20",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
